panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__initialisation__test_excess_initialisers.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/initialisation/test_excess_initialisers.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: excess element in scalar initialiser
   ╭─[panko/tests/cases/initialisation/test_excess_initialisers.c:1:22]
   │
 1 │ int static_int = {1, 2};
   │     ─────┬────       ┬  
   │          │           ╰── `static_int`’s type `int` is scalar
   │          │              
   │          ╰────────────── while initialising this variable
───╯

Error: excess element in array initialiser
   ╭─[panko/tests/cases/initialisation/test_excess_initialisers.c:2:30]
   │
 2 │ int static_array[2] = {1, 2, 3};
   │     ──────┬─────             ┬  
   │           │                  ╰── trying to initialise element at index 2 for `array<int; (constexpr 2)>`
   │           │                     
   │           ╰───────────────────── while initialising this variable
───╯

Error: excess element in scalar initialiser
   ╭─[panko/tests/cases/initialisation/test_excess_initialisers.c:5:17]
   │
 5 │     int x = {1, 2};
   │         ┬       ┬  
   │         │       ╰── `x`’s type `int` is scalar
   │         │          
   │         ╰────────── while initialising this variable
───╯

Error: excess element in array initialiser
   ╭─[panko/tests/cases/initialisation/test_excess_initialisers.c:6:24]
   │
 6 │     int xs[2] = {1, 2, 3, 4};
   │         ─┬             ┬  
   │          │             ╰── trying to initialise element at index 2 for `array<int; (constexpr 2)>`
   │          │                
   │          ╰──────────────── while initialising this variable
───╯

Error: excess element in array initialiser
   ╭─[panko/tests/cases/initialisation/test_excess_initialisers.c:6:27]
   │
 6 │     int xs[2] = {1, 2, 3, 4};
   │         ─┬                ┬  
   │          │                ╰── trying to initialise element at index 3 for `array<int; (constexpr 2)>`
   │          │                   
   │          ╰─────────────────── while initialising this variable
───╯

Error: excess element in array initialiser
   ╭─[panko/tests/cases/initialisation/test_excess_initialisers.c:7:33]
   │
 7 │     int ys[2][2] = {1, 2, 3, 4, 5};
   │         ─┬                      ┬  
   │          │                      ╰── trying to initialise element at index 2 for `array<array<int; (constexpr 2)>; (constexpr 2)>`
   │          │                         
   │          ╰───────────────────────── while initialising this variable
───╯

Error: excess element in array initialiser
   ╭─[panko/tests/cases/initialisation/test_excess_initialisers.c:8:28]
   │
 8 │     int zs[3][2] = {{1, 2, 3}, {4, 5}};
   │         ─┬                 ┬  
   │          │                 ╰── trying to initialise element at index 2 for `array<int; (constexpr 2)>`
   │          │                    
   │          ╰──────────────────── while initialising this variable
───╯

Error: excess element in scalar initialiser
    ╭─[panko/tests/cases/initialisation/test_excess_initialisers.c:11:50]
    │
 11 │     int scalar_in_array_initialiser[2] = {1, {2, 3}};
    │         ─────────────┬─────────────              ┬  
    │                      │                           ╰── `scalar_in_array_initialiser`’s type `array<int; (constexpr 2)>` is scalar
    │                      │                              
    │                      ╰────────────────────────────── while initialising this variable
────╯

Error: excess element in array initialiser
    ╭─[panko/tests/cases/initialisation/test_excess_initialisers.c:14:16]
    │
 13 │     int multiline[3][2] = {
    │         ────┬────  
    │             ╰────── while initialising this variable
 14 │         {1, 2, 3},
    │                ┬  
    │                ╰── trying to initialise element at index 2 for `array<int; (constexpr 2)>`
────╯
